--- a/style.css
+++ b/style.css
@@ -30,18 +30,25 @@ Version:        0.1.0
     }
 }
 
+
+.woo-home-search {
+    background-color: var(--background-barra);
+}
+
 .woo-home-search .woocommerce-product-search {
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    width: 50%;
+    width: 100%;
 }
 
 .woo-home-search .woocommerce-product-search input {
     background-color: var(--background-pesquisa);
     border-radius: 50px;
     border: 0;
+    margin-top: 20px;
     padding-left: 15px;
+    width: calc(100% - 50px);
 }
 
 .woo-home-search .woocommerce-product-search input:focus {
@@ -55,15 +62,19 @@ Version:        0.1.0
     box-shadow: none;
     box-sizing: border-box;
     height: 39px;
-    margin: 2px 0 0 10px;
-    padding: 3px 0 0 0;
+    margin: 22px 0 0 10px;
+    padding: 4px 0 0 0;
     width: 39px;
 }
 
+.woo-home-search .woocommerce-product-search button svg .path {
+    stroke:var(--background-lupa);
+}
+
 @media (max-width: 767px) {
-    .container.woo-home-search {
+    .woo-home-search  .container{
         max-width: 100% !important;
-        padding: 15px 15px 0 15px !important;
+        padding: 0 15px 0 15px !important;
     }
 
     .woo-home-search .woocommerce-product-search {
@@ -72,5 +83,40 @@ Version:        0.1.0
 
     .woo-home-search .woocommerce-product-search input {
         max-width: 80%;
+    }
+}
+
+/* Mobile menu */
+@media (max-width: 767px) {
+    #Side_slide .close-wrapper {
+        height: 40px !important;
+    }
+
+    #Side_slide .extras {
+        padding: 0 10px !important;
+    }
+
+    #Side_slide .close-wrapper a.close {
+        margin: 5px 5px 0 0 !important;
+    }
+
+    #Side_slide .extras .extras-wrapper a.icon.search {
+        display: none;
+    }
+
+    #Side_slide .extras .extras-wrapper .header-cart-total {
+        padding-left: 10px;
+    }
+
+    .menu_wrapper #menu #menu-mobile-menu li {
+        border-top: 1px solid rgba(255, 255, 255, 0.3);
+    }
+
+    .menu_wrapper #menu #menu-mobile-menu li:last-child {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3) !important;
+    }
+
+    .menu_wrapper #menu #menu-mobile-menu li a {
+        padding: 8px 10px;
     }
 }
