--- a/style.css
+++ b/style.css
@@ -310,3 +310,19 @@ a.button.pisol-shipping-calculator-button {
 .woocommerce-cart .woocommerce .woocommerce-message.alert.alert_success {
 	display: none;
 }
+
+.woocommerce-checkout .elementor-social-icon {
+	--e-social-icon-icon-color: #fff;
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	background-color: #818a91;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	text-align: center;
+	cursor: pointer;
+}
