--- a/admin.css
+++ b/admin.css
@@ -10,3 +10,30 @@
 	border: 1px solid #c3c4c7;
 	border-radius: 4px;
 }
+
+.wp-admin #mp_order_fields a {
+	background: #2271b1;
+	border-color: #2271b1;
+	color: #fff;
+	text-decoration: none;
+	text-shadow: none;
+	font-size: 13px;
+	line-height: 2.15384615;
+	min-height: 30px;
+	margin: 7px 0 0 0;
+	padding: 0 10px;
+	cursor: pointer;
+	border-width: 1px;
+	border-style: solid;
+	-webkit-appearance: none;
+	border-radius: 3px;
+	white-space: nowrap;
+	box-sizing: border-box;
+	display: inline-block;
+}
+
+.wp-admin #mp_order_fields a:hover {
+	background: #135e96;
+	border-color: #135e96;
+	color: #fff;
+}
