--- a/print.css
+++ b/print.css
@@ -31,6 +31,12 @@
     flex-basis: 50%;
 }
 
+.print-order span {
+    display: block;
+    font-size: 16px;
+    padding-bottom: 8px;
+}
+
 @page {
     size: auto;
     margin: 0;
