--- a/admin.css
+++ b/admin.css
@@ -43,3 +43,68 @@
     font-size: 16px;
     padding-bottom: 8px;
 }
+
+/* Welcome panel */
+.welcome-panel-content,
+.welcome-panel-close {
+	display: none;
+}
+
+.madame-prata-welcome-panel-content {
+	border: 1px solid #c3c4c7;
+	box-shadow: 0 1px 1px rgba(0,0,0,.04);
+	background: #fff;
+	border-radius: 2px;
+	padding: 60px;
+}
+
+.madame-prata-welcome-panel-content .buttons {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(20%, auto));
+	gap: 15px;
+	margin: 30px auto;
+	max-width: 1000px;
+	text-align: center;
+}
+
+.madame-prata-welcome-panel-content .buttons a {
+	background-color: #fa19a7;
+	border-radius: 10px;
+	color: #FFF;
+	font-size: 18px;
+	font-weight: bold;
+	padding: 60px 30px;
+	text-align: center;
+	text-decoration: none;
+	transition: all .2s ease-in-out;
+	box-shadow: 0px 1px 1px 0px rgba(119,60,96,0.25);
+	-webkit-box-shadow: 0px 1px 1px 0px rgba(119,60,96,0.25);
+	-moz-box-shadow: 0px 1px 1px 0px rgba(119,60,96,0.25);
+}
+
+.madame-prata-welcome-panel-content .buttons a:hover {
+	background-color: #e90a97;
+	box-shadow: 0px 1px 5px 0px rgba(119,60,96,0.75);
+	-webkit-box-shadow: 0px 1px 5px 0px rgba(119,60,96,0.75);
+	-moz-box-shadow: 0px 1px 5px 0px rgba(119,60,96,0.75);
+}
+
+.madame-prata-welcome-panel-content .custom-logo-link {
+	display: table;
+	margin: 0 auto;
+}
+
+.madame-prata-welcome-panel-content .custom-logo-link img {
+	height: auto;
+	max-width: 200px;
+}
+
+@media (max-width: 768px) {
+	.madame-prata-welcome-panel-content .buttons {
+		grid-template-columns: 1fr 1fr;
+	}
+
+	.madame-prata-welcome-panel-content .buttons a {
+		padding: 30px 15px;
+	}
+}
