--- a/admin.css
+++ b/admin.css
@@ -41,7 +41,7 @@
 .print-order span {
     display: block;
     font-size: 16px;
-    padding-bottom: 8px;
+    line-height: 1.2;
 }
 
 /* Welcome panel */
@@ -107,4 +107,234 @@
 	.madame-prata-welcome-panel-content .buttons a {
 		padding: 30px 15px;
 	}
+}
+
+span.woocommerce-Price-currencySymbol {
+	display: inline-block;
+}
+
+.order-details span {
+	padding-bottom: 0;
+}
+
+/* Basic Table Styling */
+table.order-details {
+	border-collapse: collapse;
+	border-spacing: 0;
+	page-break-inside: always;
+	border: 0;
+	margin: 30px 0 0 0;
+	padding: 0;
+}
+
+th, td {
+	vertical-align: top;
+	text-align: left;
+}
+
+table.container {
+	width:100%;
+	border: 0;
+}
+
+tr {
+    border-top: 2px solid #555;
+	border-bottom: 2px solid #555;
+}
+
+tr.no-borders,
+td.no-borders {
+	border: 0 !important;
+	border-top: 0 !important;
+	border-bottom: 0 !important;
+	padding: 0 !important;
+	width: auto;
+}
+
+div.bottom-spacer {
+	clear: both;
+	height: 8mm;
+}
+
+/* Header */
+table.head {
+	margin-bottom: 12mm;
+}
+
+td.header img {
+	max-height: 3cm; /* may be overriden by the settings */
+	width: auto;
+}
+
+td.header {
+	font-size: 16pt;
+	font-weight: 700;
+}
+
+td.shop-info {
+	width: 40%;
+}
+.document-type-label {
+	text-transform: uppercase;
+}
+
+td.order-data {
+	width: 40%;
+}
+
+td.order-data table {
+	width: 100%;
+}
+
+td.order-data table th {
+	font-weight: normal;
+	padding-right: 2mm;
+	width: 50%;
+}
+
+.invoice .shipping-address {
+	width: 30%;
+}
+
+.packing-slip .billing-address {
+	width: 30%;
+}
+
+/* Order details */
+table.order-details {
+	width:100%;
+	margin-bottom: 8mm;
+	page-break-before: avoid;
+}
+
+.quantity,
+.price {
+	width: 20%;
+}
+
+.order-details tr {
+	page-break-inside: always;
+	page-break-after: auto;	
+}
+
+table.order-details td,
+table.order-details th {
+	border-bottom: 1px #ccc solid;
+	border-top: 1px #ccc solid;
+	padding: 5px;
+}
+
+table.order-details th {
+	font-weight: bold;
+	text-align: left;
+}
+
+table.order-details thead th {
+	color: white;
+	background-color: #555;
+	border-color: #555;
+}
+
+/* product bundles compatibility */
+.order-details tr.bundled-item td.product {
+	padding-left: 5mm;
+}
+
+.order-details tr.product-bundle td,
+.order-details tr.bundled-item td {
+	border: 0;
+}
+
+.order-details tr.bundled-item.hidden {
+	display: none;
+}
+
+/* item meta formatting for WC2.6 and older */
+dl {
+	margin: 4px 0;
+}
+
+dt, dd, dd p {
+	display: inline;
+	font-size: 7pt;
+	line-height: 7pt;
+}
+
+dd {
+	margin-left: 5px;
+}
+
+dd:after {
+	content: "\A";
+	white-space: pre;
+}
+/* item-meta formatting for WC3.0+ */
+.wc-item-meta {
+	margin: 4px 0;
+	font-size: 7pt;
+	line-height: 7pt;
+}
+.wc-item-meta p {
+	display: inline;
+}
+.wc-item-meta li {
+	margin: 0;
+	margin-left: 5px;
+}
+
+/* Notes & Totals */
+.document-notes,
+.customer-notes {
+	margin-top: 5mm;
+	word-wrap: break-word;
+}
+
+table.totals {
+	width: 100%;
+	margin-top: 5mm;
+	table-layout: fixed;
+}
+
+table.totals th,
+table.totals td {
+	border: 0;
+	border-top: 1px solid #555;
+	border-bottom: 1px solid #555;
+}
+
+table.totals th.description,
+table.totals td.price {
+	width: 50%;
+}
+
+table.totals tr.order_total td,
+table.totals tr.order_total th {
+	border-top: 2px solid #555;
+	border-bottom: 2px solid #555;
+	font-weight: bold;
+}
+
+table.totals tr.payment_method {
+	display: none;
+}
+
+/* Footer Imprint */
+#footer {
+	position: absolute;
+	bottom: -2cm;
+	left: 0;
+	right: 0;
+	height: 2cm; /* if you change the footer height, don't forget to change the bottom (=negative height) and the @page margin-bottom as well! */
+	text-align: center;
+	border-top: 0.1mm solid gray;
+	margin-bottom: 0;
+	padding-top: 2mm;
+}
+
+/* page numbers */
+.pagenum:before {
+	content: counter(page);
+}
+.pagenum,.pagecount {
+	font-family: sans-serif;
 }
