--- a/style.css
+++ b/style.css
@@ -248,10 +248,45 @@ Version:        0.1.0
 	}
 }
 
+/* Título na single de produto */
+.single-product .woocommerce-products-header__title.title.page-title {
+	font-size: 30px;
+	font-weight: 600;
+	line-height: 1.2;
+}
+
+/* Preço na single de produto */
 .single-product .mcb-column-inner .price {
 	color: #e82f70;
-	font-size: 30px;
+	font-size: 28px;
 	font-weight: 500;
+	line-height: 1.2;
+}
+
+/* Parcelamento na single de produto */
+.single-product .p-woo-pagseguro-price .p-woo-pagseguro-installment {
+	font-size: 16px;
+	line-height: 1.5;
+}
+
+/* Variações na single de produto */
+.single-product .mfn-variations-wrapper label {
+	font-size: 16px;
+	line-height: 1.5;
+}
+
+/* Descrição curta na single de produto */
+.single-product .woocommerce-product-details__short-description h3,
+.single-product .woocommerce-product-details__short-description h3 strong {
+	font-size: 24px;
+	font-weight: 500;
+	line-height: 1.3;
+	margin-top: 15px;
+}
+
+.product_meta.mfn_product_meta .posted_in {
+	font-size: 16px;
+	line-height: 1.5;
 }
 
 .pisol-ppscw-container #calc_shipping_country_field {
@@ -277,6 +312,10 @@ Version:        0.1.0
 	width: 70%;
 }
 
+#calc_shipping_postcode_field #calc_shipping_postcode {
+	border-color: #a2a2a2;
+}
+
 .pisol-shipping-calculator-form p.form-row {
 	padding: 0;
 }
@@ -289,6 +328,10 @@ Version:        0.1.0
 	background-color: transparent;
 	border-radius: 3px;
 	border: 0;
+	color: #a8a8a8;
+	font-size: 16px;
+	font-style: italic;
+	padding-left: 0;
 }
 
 .woocommerce .stock {
@@ -381,6 +424,31 @@ a.button.pisol-shipping-calculator-button {
 	position: relative !important;
 	top: 0 !important;
 	bottom: auto !important;
+}
+
+@media (max-width: 600px) {
+	/* Título na single de produto */
+	.single-product .woocommerce-products-header__title.title.page-title {
+		font-size: 24px;
+		line-height: 1.4;
+	}
+
+	.single-product .column_product_title .mcb-column-inner.mcb-item-product_title-inner {
+		margin-bottom: 0 !important;
+	}
+
+	/* Preço na single de produto */
+	.single-product .mcb-column-inner .price {
+		font-size: 24px;
+		line-height: 1.4;
+	}
+
+	/* Descrição curta na single de produto */
+	.single-product .woocommerce-product-details__short-description h3,
+	.single-product .woocommerce-product-details__short-description h3 strong {
+		font-size: 22px;
+		line-height: 1.4;
+	}
 }
 
 @media (max-width: 500px) {
