--- a/style.css
+++ b/style.css
@@ -249,9 +249,13 @@ Version:        0.1.0
 }
 
 /* Título na single de produto */
+.single-product .column_product_title .mcb-column-inner.mcb-item-product_title-inner {
+	margin-bottom: 10px !important;
+}
+
 .single-product .woocommerce-products-header__title.title.page-title {
 	font-size: 30px;
-	font-weight: 600;
+	font-weight: 700;
 	line-height: 1.2;
 }
 
@@ -259,14 +263,28 @@ Version:        0.1.0
 .single-product .mcb-column-inner .price {
 	color: #e82f70;
 	font-size: 28px;
-	font-weight: 500;
+	font-weight: 800;
 	line-height: 1.2;
 }
 
+.single-product .column_product_price .mcb-column-inner {
+	margin-bottom: 10px !important;
+}
+
 /* Parcelamento na single de produto */
+.single-product .p-woo-pagseguro-price {
+	margin-top: 0;
+	padding-top: 0;
+}
+
 .single-product .p-woo-pagseguro-price .p-woo-pagseguro-installment {
 	font-size: 16px;
 	line-height: 1.5;
+}
+
+.single-product .p-woo-pagseguro-price .p-woo-pagseguro-installment strong {
+	font-size: 14px;
+	font-weight: 400;
 }
 
 /* Variações na single de produto */
