--- a/style.css
+++ b/style.css
@@ -267,6 +267,13 @@ Version:        0.1.0
 	line-height: 1.2;
 }
 
+.single-product .mcb-column-inner .price ins {
+	color: #e82f70;
+	font-size: 28px;
+	font-weight: 800 !important;
+	line-height: 1.2;
+}
+
 .single-product .column_product_price .mcb-column-inner {
 	margin-bottom: 10px !important;
 }
