--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description:    Betheme child theme.
 Author:         Web41
 Author URI:     https://web41.com.br
 Template:       betheme
-Version:        0.1.0
+Version:        0.2.0
 */
 
 @media (max-width: 767px) {
@@ -511,6 +511,10 @@ a.button.pisol-shipping-calculator-button {
 .woocommerce-checkout .argmc-wrapper .argmc-nav-buttons {
 	display: block;
 	text-align: center;
+}
+
+.woocommerce-checkout .argmc-nav-buttons #argmc-skip-login {
+	background-color: white;
 }
 
 #ship-to-different-address {
